test/release/examples/spec/Arrays/sparse-error.good
sparse-error.chpl:9: error: halt reached - attempting to assign a 'zero' value in a sparse array: (1, 5)
